--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
                 <h1>Ristorante con Fusion</h1>
                 <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
               </div>
-              <div class="col-12 col-sm align-self-center">
+              <div class="col-12 col-sm-3 align-self-center">
                 <img src="img/logo.png" class="img-fluid">
+              </div>
+              <div class="col-12 col-sm-3 align-self-center">
+                <a class="btn btn-warning" href="#reserve">
+                  Reserve Table
+                </a>
               </div>
             </div>
           </div>
@@ -56,7 +61,7 @@
                 <img class="d-flex mr-3 img-thumbnail align-self-center"
                 src="img/uthappizza.png" alt="uthappizza">
                 <div class="media-body">
-                  <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                  <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                   <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                 </div>
               </div>
@@ -68,8 +73,12 @@
               <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-              <h2>Weekend Grand Buffet</h2>
+              <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
               <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            </div>
+            <div class="media">
+              <img class="d-flex ml-3 img-thumbnail"
+                src="img/buffet.png" alt="buffet">
             </div>
           </div>
 
@@ -89,6 +98,63 @@
               </div>
             </div>
           </div>
+          <div class="row row-content">
+            <div class="col-sm-8 align-self-center">
+            <div class="card" id="reserve">
+              <h3 class="card-header bg-warning">Reserve a Table</h3>
+              <div class="card-body">
+                <form>
+                  <div class="form-group row">
+                    <label for="numberofguests" class="col-md-2 col-form-label">Number of Guests</label>
+                    <div class="form-check col-md-1">
+                      <input class"form-check-input" type="radio" name="1guest"
+                        id="1guest" value="1guest">
+                      <label class="form-check-label" for="1guest">1</label>
+                    </div>
+                    <div class="form-check col-md-1">
+                      <input class"form-check-input" type="radio" name="2guests"
+                        id="2guests" value="test1">
+                      <label class="form-check-label" for="2guests">2</label>
+                    </div>
+                    <div class="form-check col-md-1">
+                      <input class"form-check-input" type="radio" name="3guests"
+                        id="3guests" value="3guests">
+                      <label class="form-check-label" for="3guests">3</label>
+                    </div>
+                    <div class="form-check col-md-1">
+                      <input class"form-check-input" type="radio" name="4guests"
+                        id="4guests" value="4guests">
+                      <label class="form-check-label" for="4guests">4</label>
+                    </div>
+                    <div class="form-check col-md-1">
+                      <input class"form-check-input" type="radio" name="5guests"
+                        id="5guests" value="5guests">
+                      <label class="form-check-label" for="5guests">5</label>
+                    </div>
+                    <div class="form-check col-md-1">
+                      <input class"form-check-input" type="radio" name="6guests"
+                        id="6guests" value="6guests">
+                      <label class="form-check-label" for="6guests">6</label>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="dateandtime" class="col-md-2 col-form-label">Date and Time</label>
+                    <div class="col-12 col-md-6">
+                      <input class="form-control" type="datetime-local" id="datetime" name="datetime">
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <div class="offset-md-2 col-md-10">
+                      <button type="submit" class="btn btn-primary">
+                        Reserve
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
         </div>
 
         <footer class="footer">
